Fix title cutting off button

--- a/app/assets/stylesheets/partials/_structure.scss
+++ b/app/assets/stylesheets/partials/_structure.scss
@@ -20,6 +20,8 @@ body {
   margin-left: 250px;
   padding-left: 20px;
   padding-right: 20px;
+  position: relative;
+  z-index: 12;
 
   #s_content {
     @include long-wrap;
